# WSN_Proyecto_1_Drone_Tello

./: .gitignore  Dockerfile  README.md  prometheus.yml
src/battery_failsafe/: package.xml  setup.cfg  setup.py
src/battery_failsafe/battery_failsafe/: battery_failsafe_node.py
src/driver_tello/: package.xml  setup.cfg  setup.py
src/driver_tello/driver_tello/: driver_node.py
src/drone_connector/: package.xml  setup.cfg  setup.py
src/drone_connector/drone_connector/: connector_node.py
src/exporter_node/: package.xml  setup.cfg  setup.py
src/exporter_node/exporter_node/: exporter_node.py
src/mission_planner/: package.xml  setup.py
src/mission_planner/mission_planner/: mission_planner_node.py
src/telemetry_monitor/: package.xml  setup.cfg  setup.py
src/telemetry_monitor/telemetry_monitor/: monitor_node.py
src/video_viewer/: package.xml  setup.cfg  setup.py
src/video_viewer/video_viewer/: viewer_node.py
src/vision_detector/: package.xml  setup.py
src/vision_detector/object_detector/: object_detector.py
